// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MarketplaceItem MarketplaceItem should render 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion=""
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Install"
            id="marketplace_modal.list.Install"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render installed plugin 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion="1.0.0"
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render when not from the marketplace 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <OverlayTrigger
          defaultOverlayShown={false}
          delayShow={400}
          overlay={
            <Tooltip
              bsClass="tooltip"
              id="plugin-marketplace__local-tooltop"
              placement="right"
            >
              <FormattedMessage
                defaultMessage="This plugin is not listed in the marketplace but was installed manually."
                id="marketplace_modal.list.local.tooltip"
                values={Object {}}
              />
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <span
            className="tag"
          >
            <FormattedMessage
              defaultMessage="Local"
              id="marketplace_modal.list.local"
              values={Object {}}
            />
          </span>
        </OverlayTrigger>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion=""
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Install"
            id="marketplace_modal.list.Install"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render with no plugin icon 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <PluginIcon
      className="icon__plugin icon__plugin--background"
    />
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion=""
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Install"
            id="marketplace_modal.list.Install"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render with server error 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link item_error"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description error_text"
        >
          An error occurred.
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion=""
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Try Again"
            id="marketplace_modal.list.try_again"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render with update and release notes available 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (0.9.9)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion="0.9.9"
        isInstalling={false}
        onUpdate={[Function]}
        releaseNotesUrl="http://example.com/release"
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render with update available 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <a
        aria-label="name, test plugin"
        className="style--none more-modal__row--link"
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
         
        <span
          className="light subtitle"
        >
          (0.9.9)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </a>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion="0.9.9"
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <Link
        to="/admin_console/plugins/plugin_id"
      >
        <button
          className="btn btn-outline"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Configure"
            id="marketplace_modal.list.configure"
            values={Object {}}
          />
        </button>
      </Link>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem MarketplaceItem should render wtih no homepage url 1`] = `
<Fragment>
  <div
    className="more-modal__row more-modal__row--link"
    id="marketplace-plugin-id"
    key="id"
  >
    <div
      className="icon__plugin icon__plugin--background"
    >
      <img
        src="icon"
      />
    </div>
    <div
      className="more-modal__details"
    >
      <span
        aria-label="name, test plugin"
        className="style--none"
      >
        name
         
        <span
          className="light subtitle"
        >
          (1.0.0)
        </span>
        <p
          className="more-modal__description"
        >
          test plugin
        </p>
      </span>
      <UpdateDetails
        availableVersion="1.0.0"
        installedVersion=""
        isInstalling={false}
        onUpdate={[Function]}
      />
    </div>
    <div
      className="more-modal__actions"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
      >
        <LoadingWrapper
          loading={false}
          text="Installing..."
        >
          <FormattedMessage
            defaultMessage="Install"
            id="marketplace_modal.list.Install"
            values={Object {}}
          />
        </LoadingWrapper>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`components/MarketplaceItem UpdateDetails should render without release notes url 1`] = `
<UpdateDetails
  availableVersion="0.0.2"
  installedVersion="0.0.1"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isInstalling={false}
  onUpdate={[Function]}
  releaseNotesUrl=""
>
  <div
    className="update"
  >
    <FormattedMessage
      defaultMessage="Update available:"
      id="marketplace_modal.list.update_available"
      values={Object {}}
    >
      <span>
        Update available:
      </span>
    </FormattedMessage>
     
    <UpdateVersion
      releaseNotesUrl=""
      version="0.0.2"
    >
      0.0.2
    </UpdateVersion>
     - 
    <b>
      <a
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Update"
          id="marketplace_modal.list.update"
          values={Object {}}
        >
          <span>
            Update
          </span>
        </FormattedMessage>
      </a>
    </b>
  </div>
</UpdateDetails>
`;

exports[`components/MarketplaceItem UpdateDetails should render without release notes url 2`] = `
<UpdateDetails
  availableVersion="0.0.2"
  installedVersion="0.0.1"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isInstalling={false}
  onUpdate={[Function]}
  releaseNotesUrl="http://example.com/release"
>
  <div
    className="update"
  >
    <FormattedMessage
      defaultMessage="Update available:"
      id="marketplace_modal.list.update_available"
      values={Object {}}
    >
      <span>
        Update available:
      </span>
    </FormattedMessage>
     
    <UpdateVersion
      releaseNotesUrl="http://example.com/release"
      version="0.0.2"
    >
      <a
        href="http://example.com/release"
        rel="noopener noreferrer"
        target="_blank"
      >
        0.0.2
      </a>
    </UpdateVersion>
     - 
    <b>
      <a
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Update"
          id="marketplace_modal.list.update"
          values={Object {}}
        >
          <span>
            Update
          </span>
        </FormattedMessage>
      </a>
    </b>
  </div>
</UpdateDetails>
`;
